# hellotest

./: AUTHORS  BUGS  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  THANKS  configure.ac  hello.c
